--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node 服务调取区块链",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "log4js": "^3.0.5",
+    "mongoose": "^5.2.14",
     "web3": "^1.0.0-beta.36"
   }
 }
